--- a/Modulo4/navigation_component/app/build.gradle
+++ b/Modulo4/navigation_component/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'cl.bootcamp.claseonclick'
+    namespace 'cl.bootcamp.clasenavigationcomponent'
     compileSdk 34
 
     defaultConfig {
-        applicationId "cl.bootcamp.claseonclick"
+        applicationId "cl.bootcamp.clasenavigationcomponent"
         minSdk 24
         targetSdk 34
         versionCode 1
@@ -29,7 +29,6 @@ android {
     buildFeatures {
         viewBinding true;
     }
-
 }
 
 dependencies {
@@ -41,4 +40,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    implementation libs.navigation.fragment;
+    implementation libs.navigation.ui;
 }
